[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainScene/Main.gd" type="Script" id=1]
[ext_resource path="res://MainScene/PopupMenu.gd" type="Script" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2048.0
margin_bottom = 40.0
color = Color( 0.133333, 0.133333, 0.152941, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 6.0
margin_right = 383.0
margin_bottom = 34.0
custom_constants/separation = 10

[node name="AddBeginNodeButton" type="Button" parent="HBoxContainer"]
margin_right = 181.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Initial"

[node name="SaveButton" type="Button" parent="HBoxContainer"]
margin_left = 191.0
margin_right = 373.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Save"

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
right_disconnects = true

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 22.0
margin_bottom = 22.0
script = ExtResource( 2 )

[connection signal="pressed" from="HBoxContainer/AddBeginNodeButton" to="." method="_on_add_begin_node_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="connection_to_empty" from="GraphEdit" to="." method="_on_GraphEdit_connection_to_empty"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
